[package]
authors = ["Zhang Zhenyuan <cryscan@umich.edu>"]
categories = ["science"]
description = "Converts an RWKV PTH model to SafeTensors."
edition = "2021"
homepage = "https://github.com/cryscan/web-rwkv-converter"
keywords = ["LLM", "deep-learning", "model", "rwkv"]
license = "MIT OR Apache-2.0"
name = "web-rwkv-converter"
repository = "https://github.com/cryscan/web-rwkv-converter"
version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytemuck = { version = "1.13", features = ["extern_crate_alloc"] }
half = { version = "2.2", features = ["bytemuck"] }
safetensors = "0.4.1"
# serde = { version = "1", features = ["derive"] }
# serde-pickle = "1.1.1"

[dependencies.repugnant-pickle]
features = ["torch"]
version = "0.0.1"

[dev-dependencies]
clap = { version = "4.3", features = ["derive"] }
memmap2 = "0.9"
